# mini_app_riv

./: .gitignore  CMakeLists.txt  README.md  README.org  flake.nix  kinds.f90  lapack_interfaces.f90  modules_lumi.sh  ovlp_3fn.f90  ovlp_3fn.hip
run/: run_lumi.sh
